# molspecutils

./: .bumpversion.cfg  .gitignore  README.md  dev-requirements.in  dev-requirements.txt  environment.yml  interactive-requirements.in  interactive-requirements.txt  local_update.ps1  local_update.sh  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: api.rst  conf.py  index.rst  install.rst
docs/api/: alchemy.convert.rst  happier.rst  mirs.rst  molecule.rst
examples/: ex_ch3clalchemy.py  ex_ch3clalchemy_intensities.py  ex_coalchemy.py
molspecutils/: cavity.py  csdngp.py  happier.py  hitran.py  lineshape.py  mirs.py  molecule.py  simulate.py  utils.py
molspecutils/alchemy/: C2H2_nu1nu3.py  CH3Cl.py  CH3Cl_nu3.py  CO.py  convert.py  meta.py
molspecutils/data/: pytips.py
molspecutils/foreign/: hapi3.py
scripts/: ch3cl_nu3_db_create.py  ch3cl_nu3_dict.py  initialize_dbs.py
spectroscopy/: cavity.py  happier.py  hitran.py  molecule.py  simulate.py
spectroscopy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
spectroscopy/alchemy/: CH3Cl.py  CO.py  convert.py  meta.py
spectroscopy/foreign/: hapi3.py
tests/: test_ch3clalchemy.py  test_ch3clalchemy_intensities.py  test_coalchemy.py  test_molecule.py
