[tool.poetry]
name = "molspecutils"
version = "0.1.1"
description = "Modules for (cavity-enhanced) high-resolution molecular spectroscopy"
authors = ["Grzegorz Kowzan <grzegorz@kowzan.eu>"]
readme = "README.md"
homepage = "https://gitlab.com/allisonlab/mdcs/spectroscopy"
repository = "https://gitlab.com/allisonlab/mdcs/spectroscopy"
classifiers=[
	'Development Status :: 3 - Alpha',
        'Environment :: Console',
        'Intended Audience :: Science/Research',
        'Topic :: Scientific/Engineering :: Physics']
include = ['README.md']

[tool.poetry.scripts]
molspecutils_init = "molspecutils.alchemy.convert:first_run"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
numpy = "^1.16.5"
scipy = "^1.3"
xarray = "^0.11.0"
pyFFTW = "^0.12.0"
appdirs = "^1.4.4"
matplotlib = "^3.3.4"
SQLAlchemy = "^1.4.6"
knickknacks = {version="^0.1.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]
python-language-server = { version="*", extras = ["all"] }
pytest = "*"

[[tool.poetry.source]]
name = "local"
url = "http://127.0.0.1:4040/simple/"

[[tool.poetry.source]]
name = "allisonlab"
url = "https://gitlab.com/api/v4/projects/26140156/packages/pypi"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"
