[tool.poetry]
name = "molspecutils"
version = "0.1.5-alpha.1"
description = "Modules for working with molecular spectroscopy data"
authors = ["Grzegorz Kowzan <grzegorz@kowzan.eu>"]
readme = "README.md"
homepage = "https://gitlab.com/allisonlab/mdcs/spectroscopy"
repository = "https://gitlab.com/allisonlab/mdcs/spectroscopy"
classifiers=[
	'Development Status :: 3 - Alpha',
        'Environment :: Console',
        'Intended Audience :: Science/Research',
        'Topic :: Scientific/Engineering :: Physics']
include = ['README.md', 'molspecutils/py.typed']

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
numpy = "^1.16.5"
scipy = "^1.3"
appdirs = "^1.4.4"
SQLAlchemy = ">=1.4.6"
Sphinx = {version = "^3.5.4", optional = true}
jupyter = {version = "^1.0.0", extras = ["interactive"]}
importlib-metadata = {version="^1.0", python="<3.8"}

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "*"
bump2version = "*"

[tool.poetry.extras]
doc = ["Sphinx"]

[[tool.poetry.source]]
name = "local"
url = "http://127.0.0.1:4040/simple/"

[[tool.poetry.source]]
name = "allisonlab"
url = "https://gitlab.com/api/v4/projects/26140156/packages/pypi"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"
