[metadata]
name = molspecutils
version = attr: molspecutils.__version__
description = Modules for working with molecular spectroscopy data
author = Grzegorz Kowzan
author_email = grzegorz@kowzan.eu
long_description = file: README.md
url = https://gitlab.com/allisonlab/mdcs/spectroscopy
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
packages = molspecutils, molspecutils.alchemy, molspecutils.data, molspecutils.foreign
python_requires = >=3.6
install_requires =
    numpy >= 1.16.5
    scipy >= 1.3
    appdirs >= 1.4.4
    SQLAlchemy >= 1.4.6

[options.extras_require]
doc = Sphinx

[options.package_data]
molspecutils = py.typed